# catix

./: Cargo.toml  README.md  flake.nix
.github/workflows/: container.yaml  lints.yaml  nix.yaml  release.yaml
catix/: Cargo.toml
catix/src/: error.rs
catix/src/cli/: mod.rs
catix/src/config/: metrics.rs  mod.rs  web.rs
crates/base/: Cargo.toml
crates/base/src/: lib.rs
crates/base/src/model/: mod.rs
crates/metrics/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs
crates/server/src/metrics/: mod.rs
crates/server/src/web/controller/: mod.rs
crates/server/src/web/controller/proxy/: mod.rs
crates/server/src/web/controller/system/: v1.rs
dev-support/containers/: docker-bake.hcl
dev-support/containers/alpine/: Containerfile
dev-support/containers/distroless/: Containerfile
devshell/: container.nix  default.nix  package.nix
