[package]
name                 = "catix-server"
description          = "Catix server"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = "0.1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

async-trait = "0.1"
futures = "0.3"
sigfinn = "0.2"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = { version = "0.1", features = ["net"] }

axum = "0.7"
http = "1"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls",
  "rustls-tls",
  "stream",
] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace"] }

lazy_static = "1"
prometheus  = "0.13"
semver      = "1"
snafu       = "0.8"

catix-base    = { path = "../base" }
catix-metrics = { path = "../metrics" }

[lints]
workspace = true
